@@ -1,7 +1,7 @@
 package io.busata.fourleft.endpoints.views;
 
 import io.busata.fourleft.api.models.ResultEntryTo;
-import io.busata.fourleft.api.models.tiers.VehicleTo;
+import io.busata.fourleft.api.models.views.VehicleTo;
 import io.busata.fourleft.api.models.views.EventInfoTo;
 import io.busata.fourleft.api.models.views.NoResultRestrictionsTo;
 import io.busata.fourleft.api.models.views.ResultListRestrictionsTo;
@@ -12,15 +12,13 @@ import io.busata.fourleft.api.models.views.ViewResultTo;
 import io.busata.fourleft.domain.clubs.models.BoardEntry;
 import io.busata.fourleft.domain.clubs.models.Event;
 import io.busata.fourleft.domain.clubs.models.Stage;
-import io.busata.fourleft.domain.configuration.ClubView;
 import io.busata.fourleft.domain.configuration.ClubViewRepository;
 import io.busata.fourleft.domain.configuration.results_views.PlayerRestrictions;
 import io.busata.fourleft.domain.configuration.results_views.SingleClubView;
-import io.busata.fourleft.domain.configuration.results_views.TiersView;
+import io.busata.fourleft.domain.configuration.results_views.TieredView;
 import io.busata.fourleft.domain.options.models.Vehicle;
-import io.busata.fourleft.domain.tiers.models.Tier;
-import io.busata.fourleft.domain.tiers.models.TierEventRestrictions;
-import io.busata.fourleft.domain.tiers.repository.TierEventRestrictionsRepository;
+import io.busata.fourleft.domain.configuration.event_restrictions.models.ViewEventRestrictions;
+import io.busata.fourleft.domain.configuration.event_restrictions.repository.ViewEventRestrictionsRepository;
 import io.busata.fourleft.endpoints.club.results.service.ResultEntryToFactory;
 import io.busata.fourleft.importer.ClubSyncService;
 import lombok.RequiredArgsConstructor;
@@ -33,54 +31,60 @@ import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
-import static java.util.List.of;
-
 @Component
 @RequiredArgsConstructor
 public class ViewResultToFactory {
     private final ClubSyncService clubSyncService;
     private final ClubViewRepository repository;
-    private final TierEventRestrictionsRepository tierEventRestrictionsRepository;
+    private final ViewEventRestrictionsRepository viewEventRestrictionsRepository;
     private final ResultEntryToFactory resultEntryToFactory;
     private final BoardEntryFetcher boardEntryFetcher;
 
     @Transactional
     @Cacheable("view_results")
     public Optional<ViewResultTo> createViewResult(UUID viewId, ClubEventSupplierType type) {
-        final var clubView = repository.findById(viewId).orElseThrow();
-
-        switch(clubView.getResultsView()) {
-            case SingleClubView view -> {
-                return createSingleClubViewResult(type.getSupplier(), clubView, view);
+        return repository.findById(viewId).map(clubView -> {
+            switch(clubView.getResultsView()) {
+                case SingleClubView view -> {
+                    return createSingleClubViewResult(type.getSupplier(), view);
+                }
+                case TieredView view -> {
+                    return createdTieredViewResult(type.getSupplier(), view);
+                }
+                default -> throw new IllegalStateException("Unexpected value: " + clubView.getResultsView());
             }
-            case TiersView view -> {
-                return createTiersViewResult(type.getSupplier(), clubView, view);
-            }
-            default -> throw new IllegalStateException("Unexpected value: " + clubView.getResultsView());
-        }
+        }).orElseThrow();
     }
 
-    private Optional<ViewResultTo> createSingleClubViewResult(ClubEventSupplier eventSupplier, ClubView clubView, SingleClubView view) {
+    private Optional<ViewResultTo> createSingleClubViewResult(ClubEventSupplier eventSupplier, SingleClubView view) {
         final var club = clubSyncService.getOrCreate(view.getClubId());
 
-        if(eventSupplier.getEvent(club).isEmpty()) {
-            return Optional.empty();
-        }
+        final var result = eventSupplier.getEvent(club)
+                .map(event -> createSingleResultList(view, event))
+                .stream()
+                .toList();
 
-        SingleResultListTo singleResultListTo = eventSupplier.getEvent(club).map(event -> this.createSingleResultTo(view, event)).orElseThrow();
-
-        ViewResultTo result = new ViewResultTo(
-                clubView.getDescription(),
+        ViewResultTo viewResult = new ViewResultTo(
+                view.getName(),
                 new ViewPropertiesTo(view.isUsePowerStage(), view.getBadgeType()),
-                of(singleResultListTo)
+                result
         );
 
-        return Optional.of(result);
+        return Optional.of(viewResult);
     }
-    private Optional<ViewResultTo> createTiersViewResult(ClubEventSupplier eventSupplier, ClubView clubView, TiersView view) {
 
-        boolean anyEventActive = view.getTiers().stream()
-                .map(Tier::getClubId)
+    private SingleResultListTo createSingleResultList(SingleClubView view, Event event) {
+        final var restrictions = viewEventRestrictionsRepository.findByResultViewIdAndChallengeIdAndEventId(view.getId(), event.getChallengeId(), event.getReferenceId());
+
+        final ResultRestrictionsTo restrictionTo = restrictions.map(this::create).orElse(new NoResultRestrictionsTo());
+
+        return this.createSingleResultTo(view, event, restrictionTo);
+    }
+
+    private Optional<ViewResultTo> createdTieredViewResult(ClubEventSupplier eventSupplier,  TieredView tieredView) {
+
+        boolean anyEventActive = tieredView.getResultViews().stream()
+                .map(SingleClubView::getClubId)
                 .map(clubSyncService::getOrCreate)
                 .map(eventSupplier::getEvent)
                 .anyMatch(Optional::isPresent);
@@ -89,31 +93,26 @@ public class ViewResultToFactory {
             return Optional.empty();
         }
 
-        final List<SingleResultListTo> allTierResults = view.getTiers().stream().map(tier -> {
-            final var club = clubSyncService.getOrCreate(tier.getClubId());
+        final List<SingleResultListTo> results = tieredView.getResultViews().stream().map(resultViews -> {
+            final var club = clubSyncService.getOrCreate(resultViews.getClubId());
 
-            return eventSupplier.getEvent(club).map(event -> {
-                final var restrictions = tierEventRestrictionsRepository.findByTierIdAndChallengeIdAndEventId(tier.getId(), event.getChallengeId(), event.getReferenceId());
-
-                final ResultRestrictionsTo restrictionTo = restrictions.map(this::create).orElse(new NoResultRestrictionsTo());
-
-                return this.createSingleResultTo(tier, view, event, restrictionTo);
-            }).orElseThrow();
+            return eventSupplier.getEvent(club).map(event -> createSingleResultList(resultViews, event)).orElseThrow();
 
         }).collect(Collectors.toList());
 
 
         ViewResultTo result = new ViewResultTo(
-                clubView.getDescription(),
-                new ViewPropertiesTo(view.isUsePowerStage(), view.getBadgeType()),
-                allTierResults
+                tieredView.getName(),
+                new ViewPropertiesTo(tieredView.isUsePowerStage(), tieredView.getBadgeType()),
+                results
         );
 
         return Optional.of(result);
     }
 
 
-    public SingleResultListTo createSingleResultTo(SingleClubView view, Event event) {
+
+    public SingleResultListTo createSingleResultTo(SingleClubView view, Event event, ResultRestrictionsTo restrictions) {
         List<BoardEntry> entries = boardEntryFetcher.create(view, event);
 
         if(view.getPlayerRestrictions() == PlayerRestrictions.EXCLUDE) {
@@ -130,29 +129,14 @@ public class ViewResultToFactory {
         return new SingleResultListTo(
                 event.getChampionship().getClub().getName(),
                 createEventInfo(event),
-                new NoResultRestrictionsTo(),
+                restrictions,
                 totalEntries,
                 results
         );
     }
 
-    public SingleResultListTo createSingleResultTo(Tier tier, TiersView view, Event event, ResultRestrictionsTo eventRestrictions){
-        List<BoardEntry> entries = boardEntryFetcher.create(view, event);
-        int totalEntries = entries.size();
-
-        entries = filterEntries(entries, tier.getPlayerNames());
-
-        return new SingleResultListTo(
-                tier.getName(),
-                createEventInfo(event),
-                eventRestrictions,
-                totalEntries,
-                resultEntryToFactory.create(entries)
-        );
-    }
-
-    public ResultRestrictionsTo create(TierEventRestrictions tierEventRestrictions) {
-        return new ResultListRestrictionsTo(tierEventRestrictions.getVehicles().stream().map(
+    public ResultRestrictionsTo create(ViewEventRestrictions viewEventRestrictions) {
+        return new ResultListRestrictionsTo(viewEventRestrictions.getVehicles().stream().map(
                 this::createVehicle).collect(Collectors.toList()));
 
     }
@@ -174,12 +158,12 @@ public class ViewResultToFactory {
     }
 
     private List<BoardEntry> filterEntries(List<BoardEntry> entries, List<String> players) {
-        List<String> sanitized = players.stream().map(String::toLowerCase).collect(Collectors.toList());
+        List<String> sanitized = players.stream().map(String::toLowerCase).toList();
 
         return entries.stream().filter(entry -> sanitized.contains(entry.getName().toLowerCase())).collect(Collectors.toList());
     }
     private List<ResultEntryTo> filterResults(List<ResultEntryTo> entries, List<String> players) {
-        List<String> sanitized = players.stream().map(String::toLowerCase).collect(Collectors.toList());
+        List<String> sanitized = players.stream().map(String::toLowerCase).toList();
 
         return entries.stream().filter(entry -> sanitized.contains(entry.name().toLowerCase())).collect(Collectors.toList());
     }
